🚀 v1.4.3: SMS登录功能重构与优化
✨ 新功能:
- 合并SMS登录和注册流程，用户体验更简洁
- 新增 /api/auth/sms-login API，支持自动用户创建
- SMS登录界面添加昵称输入框（可选）
- 隐藏SMS登录模式下的注册按钮

🔧 后端优化:
- 集成阿里云短信服务，支持真实短信发送
- 新增 DirectSmsLoginRequest 数据类
- 优化用户创建逻辑，自动生成密码满足数据库约束
- 完善SMS服务配置和错误处理

🎨 前端改进:
- 更新LoginViewModel使用新的directSmsLogin API
- 优化SMS登录界面UI，移除冗余的注册相关元素
- 添加中英文昵称输入框字符串资源
- 改进用户交互流程

🛠️ 技术改进:
- 更新UserRepository和UserApiService
- 完善ProGuard规则，保留网络相关类
- 优化Gradle构建配置
- 添加调试脚本和部署工具
- 添加环境配置示例文件

📱 版本信息:
- 版本号: 1.4.3
- 构建类型: Alipay Release
- 支持真实短信验证码发送和接收

🔒 安全改进:
- 环境配置文件已从版本控制中排除
- 敏感信息通过.gitignore保护

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -240,6 +240,8 @@
     <string name="login_sending_code">发送中...</string>
     <string name="login_send_code">发送验证码</string>
     <string name="login_send_sms_failed">发送验证码失败</string>
+    <string name="login_nickname_optional">昵称（可选）</string>
+    <string name="login_nickname_placeholder">设置您的昵称</string>
     <string name="no_account">没有账户？</string>
     <string name="has_account">已有账户？</string>
     <string name="register_now">立即注册</string>
@@ -882,9 +884,13 @@
     <string name="version_name">版本名称</string>
     <string name="version_code">版本号</string>
     <string name="build_type">构建类型</string>
+    <string name="build_type_debug">调试版</string>
+    <string name="build_type_release">发布版</string>
     <string name="application_id">应用包名</string>
     <string name="target_sdk">目标SDK</string>
     <string name="min_sdk">最低SDK</string>
+    <string name="target_sdk_value">Android 15 (API 35)</string>
+    <string name="min_sdk_value">Android 7.0 (API 24)</string>
     <string name="features">功能特性</string>
     <string name="feature_usage_tracking">应用使用时间跟踪</string>
     <string name="feature_goal_setting">目标设置与提醒</string>
@@ -892,4 +898,5 @@
     <string name="feature_premium_upgrade">高级功能升级</string>
     <string name="feature_google_play">Google Play支付</string>
     <string name="feature_alipay">支付宝支付</string>
+    <string name="copyright_text">© 2024 OffTimes. 保留所有权利。</string>
 </resources> 
