--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -239,6 +239,8 @@
     <string name="login_sending_code">Sending...</string>
     <string name="login_send_code">Send Code</string>
     <string name="login_send_sms_failed">Failed to send SMS code</string>
+    <string name="login_nickname_optional">Nickname (Optional)</string>
+    <string name="login_nickname_placeholder">Set your nickname</string>
     <string name="no_account">No account?</string>
     <string name="has_account">Already have an account?</string>
     <string name="register_now">Register Now</string>
@@ -870,4 +872,27 @@
     <!-- 首次设置 -->
     <string name="onboarding_first_setup">Initial Setup</string>
     <string name="loading">Loading...</string>
+    
+    <!-- About Page -->
+    <string name="about">About</string>
+    <string name="app_description">Focus on helping users manage phone usage time and cultivate healthy digital living habits</string>
+    <string name="version_info">Version Information</string>
+    <string name="version_name">Version Name</string>
+    <string name="version_code">Version Code</string>
+    <string name="build_type">Build Type</string>
+    <string name="build_type_debug">Debug</string>
+    <string name="build_type_release">Release</string>
+    <string name="application_id">Application ID</string>
+    <string name="target_sdk">Target SDK</string>
+    <string name="min_sdk">Minimum SDK</string>
+    <string name="target_sdk_value">Android 15 (API 35)</string>
+    <string name="min_sdk_value">Android 7.0 (API 24)</string>
+    <string name="features">Features</string>
+    <string name="feature_usage_tracking">App Usage Time Tracking</string>
+    <string name="feature_goal_setting">Goal Setting &amp; Reminders</string>
+    <string name="feature_statistics">Detailed Statistics Analysis</string>
+    <string name="feature_premium_upgrade">Premium Feature Upgrade</string>
+    <string name="feature_google_play">Google Play Payment</string>
+    <string name="feature_alipay">Alipay Payment</string>
+    <string name="copyright_text">© 2024 OffTimes. All rights reserved.</string>
 </resources> 
